replace some code with new APIs; general clean up; update Dockerfile